# Value-Envelopes

./: .gitignore  Cargo.toml  README.md  batch.json  batch.yaml  compile_plots.tex  convergence.json  convergence.yaml  environments.py  expanding_reward copy.yaml  expanding_reward.json  expanding_reward.yaml  experiments.json  experiments.yaml  generate_R_vs_D.py  generate_mdp_trials.py  generate_regrets.py  main.py  mdp_trials.py  offline_rl.py  online_rl.py  plot_q_shaping_vs_K.tex  plot_v_shaping_vs_K.tex  python_plot_R_vs_D.py  python_plot_mdp_trials.py  python_plot_regrets.py  regret_curves.json  regret_curves.yaml  requirements.txt  saved_regret_curves.yaml  sliding_window copy.yaml  sliding_window.json  sliding_window.yaml  utils.py
ExpandingReward/: parameters.txt
RegretCurves_H20_S60_A3_T1000000_Layered/: parameters.txt
RegretCurves_H4_S12_A3_T1000000_Layered/: parameters.txt
RegretCurves_H4_S12_A3_T10000_Layered/: parameters.txt
SlidingWindow_width0p10/: parameters.txt
article_data/ExpandingReward/: parameters.txt
article_data/RegretCurves_H4_S12_A3_T1000000_Layered/: parameters.txt
article_data/ShrinkingReward/: parameters.txt
article_data/SlidingWindow_width0p10/: parameters.txt
src/: lib.rs  main.rs  mdp.rs  offline.rs  plotting.rs
src/agents/: mod.rs  shaping.rs  standard.rs
tex files/: R_vs_D.tex  mdp_trials.tex  plot_q_shaping_vs_K.tex  plot_v_shaping_vs_K.tex
