[package]
name = "value-envelopes"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
ndarray-rand = "0.14"
plotters = "0.3"
